--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,9 @@
 	"unsup_manifest": "root-1",
 	"name": "Vanilla Create",
 	"versions": {
-		"current": { "name": "5.7.0", "code": 1 },
+		"current": { "name": "5.7.1", "code": 2 },
 		"history": [
+			{ "name": "5.7.0", "code": 1 }
 		]
 	}
 }
